# pruneguard

./: .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  oxgraph.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pruneguard.json
.cargo/: config.toml
.githooks/: pre-commit
.github/actions/pruneguard/: README.md  action.yml
.github/scripts/: publish-if-needed.sh
.github/workflows/: ci.yml  release-smoke.yml  release.yml  smoke.yml
apps/oxgraph/: Cargo.toml  package.json
apps/oxgraph/src/: cli.rs  lib.rs  main.rs  migrate.rs
apps/oxgraph/src-js/: cli.ts  index.ts  native.ts
apps/oxgraph/tests/: operational_smoke.rs  parity_smoke.rs  scan_smoke.rs
apps/pruneguard/: Cargo.toml  package.json
apps/pruneguard-tsgo/: Cargo.toml
apps/pruneguard-tsgo/src/: main.rs
apps/pruneguard/src/: cli.rs  lib.rs  main.rs  migrate.rs
apps/pruneguard/src-js/: bin.ts  cli.ts  index.ts  native.ts  runtime.ts
apps/pruneguard/tests/: operational_smoke.rs  parity_smoke.rs  scan_smoke.rs
benchmarks/: corpora.toml  framework_corpora.toml
crates/oxgraph_analyzers/: Cargo.toml
crates/oxgraph_analyzers/src/: boundaries.rs  cycles.rs  impact.rs  lib.rs  ownership.rs  unused_dependencies.rs  unused_exports.rs  unused_files.rs  unused_packages.rs
crates/oxgraph_cache/: Cargo.toml
crates/oxgraph_cache/src/: lib.rs
crates/oxgraph_config/: Cargo.toml
crates/oxgraph_config/src/: config.rs  error.rs  lib.rs  merge.rs
crates/oxgraph_discovery/: Cargo.toml
crates/oxgraph_discovery/src/: lib.rs
crates/oxgraph_entrypoints/: Cargo.toml
crates/oxgraph_entrypoints/src/: lib.rs
crates/oxgraph_extract/: Cargo.toml
crates/oxgraph_extract/src/: lib.rs
crates/oxgraph_frameworks/: Cargo.toml
crates/oxgraph_frameworks/src/: lib.rs
crates/oxgraph_fs/: Cargo.toml
crates/oxgraph_fs/src/: lib.rs
crates/oxgraph_git/: Cargo.toml
crates/oxgraph_git/src/: lib.rs
crates/oxgraph_graph/: Cargo.toml
crates/oxgraph_graph/src/: build.rs  lib.rs  module_graph.rs  symbol_graph.rs
crates/oxgraph_manifest/: Cargo.toml
crates/oxgraph_manifest/src/: lib.rs
crates/oxgraph_report/: Cargo.toml
crates/oxgraph_report/src/: types.rs
crates/oxgraph_resolver/: Cargo.toml
crates/oxgraph_resolver/src/: lib.rs
crates/oxgraph_rules/: Cargo.toml
crates/oxgraph_rules/src/: lib.rs
crates/pruneguard_analyzers/: Cargo.toml
crates/pruneguard_analyzers/src/: boundaries.rs  cycles.rs  duplicate_exports.rs  external_parity.rs  impact.rs  lib.rs  ownership.rs  parity.rs  semantic_scheduler.rs  suggest_rules.rs  unused_dependencies.rs  unused_exports.rs  unused_files.rs  unused_members.rs  unused_packages.rs
crates/pruneguard_analyzers/tests/: external_parity_test.rs  parity_test.rs
crates/pruneguard_cache/: Cargo.toml
crates/pruneguard_cache/src/: lib.rs
crates/pruneguard_compat/: Cargo.toml
crates/pruneguard_compat/src/: lib.rs
crates/pruneguard_config/: Cargo.toml
crates/pruneguard_config/src/: config.rs  error.rs  merge.rs
crates/pruneguard_config_readers/: Cargo.toml
crates/pruneguard_config_readers/src/: adapters.rs  lib.rs
crates/pruneguard_daemon/: Cargo.toml
crates/pruneguard_daemon/src/: client.rs  index.rs  lib.rs  metadata.rs  protocol.rs  server.rs  watcher.rs
crates/pruneguard_discovery/: Cargo.toml
crates/pruneguard_discovery/src/: lib.rs
crates/pruneguard_entrypoints/: Cargo.toml
crates/pruneguard_entrypoints/src/: lib.rs
crates/pruneguard_extract/: Cargo.toml
crates/pruneguard_extract/src/: lib.rs
crates/pruneguard_frameworks/: Cargo.toml
crates/pruneguard_frameworks/src/: lib.rs
crates/pruneguard_fs/: Cargo.toml
crates/pruneguard_fs/src/: lib.rs
crates/pruneguard_git/: Cargo.toml
crates/pruneguard_git/src/: lib.rs
crates/pruneguard_graph/: Cargo.toml
crates/pruneguard_graph/src/: build.rs  ids.rs  module_graph.rs  symbol_graph.rs
crates/pruneguard_manifest/: Cargo.toml
crates/pruneguard_manifest/src/: lib.rs
crates/pruneguard_report/: Cargo.toml
crates/pruneguard_report/src/: types.rs
crates/pruneguard_resolver/: Cargo.toml
crates/pruneguard_resolver/src/: lib.rs
crates/pruneguard_rules/: Cargo.toml
crates/pruneguard_rules/src/: lib.rs
crates/pruneguard_semantic_client/: Cargo.toml
crates/pruneguard_semantic_client/src/: lib.rs
crates/pruneguard_semantic_protocol/: Cargo.toml
crates/pruneguard_semantic_protocol/src/: lib.rs
docs/: agent-integration.md  agent-usage.md  architecture.md  benchmarks.md  ci-integration.md  competitive.md  config.md  getting-started.md  js-api.md  migration.md  operational.md  parity.md  performance.md  recipes.md
fixtures/cases/ambient-declaration-excluded/: package.json
fixtures/cases/ambient-declarations/: expected.json  package.json
fixtures/cases/angular-build-targets/: angular.json  expected.json  package.json
fixtures/cases/astro-pages-and-content-config/: expected.json  package.json
fixtures/cases/baseline-profile-mismatch/: package.json
fixtures/cases/boundaries-dependency-kinds/: oxgraph.json  package.json
fixtures/cases/boundaries-entrypoint-kinds/: package.json  pruneguard.json
fixtures/cases/boundaries-package/: oxgraph.json  package.json
fixtures/cases/boundaries-path/: oxgraph.json  package.json
fixtures/cases/boundaries-profiles/: oxgraph.json  package.json
fixtures/cases/rules-tags/: oxgraph.json  (+1 more)
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64-gnu/: package.json
npm/cli-linux-arm64-musl/: package.json
npm/cli-linux-x64-gnu/: package.json
npm/cli-linux-x64-musl/: package.json
npm/cli-win32-arm64-msvc/: package.json
npm/cli-win32-x64-msvc/: package.json
npm/oxgraph/: README.md  configuration_schema.json  package.json  report_schema.json
npm/pruneguard/: README.md  configuration_schema.json  daemon_status_report_schema.json  fix_plan_report_schema.json  package.json  report_schema.json  review_report_schema.json  safe_delete_report_schema.json  suggest_rules_report_schema.json
scripts/: lint_audit.sh  stage_npm_release.mjs
(+864 files in other folders)
