[workspace]
resolver = "3"
members = ["apps/*", "crates/*"]

[workspace.package]
authors = ["pruneguard contributors"]
categories = ["development-tools"]
edition = "2024"
homepage = "https://github.com/ferc/pruneguard"
keywords = ["javascript", "typescript", "monorepo", "graph", "unused-code"]
license = "MIT"
repository = "https://github.com/ferc/pruneguard"
rust-version = "1.92.0"
description = "Repo truth engine for JS/TS monorepos"

[workspace.lints.rust]
unsafe_code = "warn"
absolute_paths_not_starting_with_crate = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common pedantic false-positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
# Require
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
# Internal crates
pruneguard_config = { path = "crates/pruneguard_config" }
pruneguard_fs = { path = "crates/pruneguard_fs" }
pruneguard_manifest = { path = "crates/pruneguard_manifest" }
pruneguard_discovery = { path = "crates/pruneguard_discovery" }
pruneguard_resolver = { path = "crates/pruneguard_resolver" }
pruneguard_extract = { path = "crates/pruneguard_extract" }
pruneguard_graph = { path = "crates/pruneguard_graph" }
pruneguard_entrypoints = { path = "crates/pruneguard_entrypoints" }
pruneguard_frameworks = { path = "crates/pruneguard_frameworks" }
pruneguard_analyzers = { path = "crates/pruneguard_analyzers" }
pruneguard_rules = { path = "crates/pruneguard_rules" }
pruneguard_report = { path = "crates/pruneguard_report" }
pruneguard_cache = { path = "crates/pruneguard_cache" }
pruneguard_git = { path = "crates/pruneguard_git" }
pruneguard_daemon = { path = "crates/pruneguard_daemon" }
pruneguard_compat = { path = "crates/pruneguard_compat" }
pruneguard_config_readers = { path = "crates/pruneguard_config_readers" }

# Oxc crates
oxc_parser = "0.117.0"
oxc_semantic = "0.117.0"
oxc_traverse = "0.117.0"
oxc_resolver = "11.1.0"
oxc_span = "0.117.0"
oxc_ast = "0.117.0"
oxc_allocator = "0.117.0"
oxc_diagnostics = "0.117.0"
oxc_syntax = "0.117.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"

# CLI
bpaf = { version = "0.9", features = ["autocomplete", "bright-color", "derive"] }

# Performance
rayon = "1"
rustc-hash = "2"
dashmap = "6"

# File system
ignore = { version = "0.4", features = ["simd-accel"] }
glob = "0.3"
globset = "0.4"
walkdir = "2"

# Graph
petgraph = "0.7"

# Cache
redb = "2"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex (lightweight)
regex-lite = "0.1"

# Misc
cow-utils = "0.1"
compact_str = { version = "0.8", features = ["serde"] }

# NAPI
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"
napi-build = "2"

# Async / daemon
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "signal", "fs", "macros"] }
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.7"

# Testing
insta = { version = "1", features = ["json", "redactions"] }
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev]
debug = false

[profile.dev.package.insta]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
