[package]
name = "oxgraph"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Repo truth engine for JS/TS monorepos"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "oxgraph"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
oxgraph_config = { workspace = true }
oxgraph_fs = { workspace = true }
oxgraph_manifest = { workspace = true }
oxgraph_discovery = { workspace = true }
oxgraph_resolver = { workspace = true }
oxgraph_extract = { workspace = true }
oxgraph_graph = { workspace = true }
oxgraph_entrypoints = { workspace = true }
oxgraph_frameworks = { workspace = true }
oxgraph_analyzers = { workspace = true }
oxgraph_rules = { workspace = true }
oxgraph_report = { workspace = true }
oxgraph_cache = { workspace = true }
oxgraph_git = { workspace = true }

bpaf = { workspace = true }
miette = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
petgraph = { workspace = true }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
