[package]
name = "oxgraph_graph"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Module and symbol graph engine for oxgraph"
publish = true

[lints]
workspace = true

[dependencies]
oxgraph_extract = { workspace = true }
oxgraph_manifest = { workspace = true }

petgraph = { workspace = true }
rustc-hash = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
