[package]
name = "oxgraph_graph"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Module and symbol graph engine for oxgraph"
publish = true

[lints]
workspace = true

[dependencies]
oxgraph_config = { workspace = true }
oxgraph_discovery = { workspace = true }
oxgraph_entrypoints = { workspace = true }
oxgraph_extract = { workspace = true }
oxgraph_fs = { workspace = true }
oxgraph_frameworks = { workspace = true }
oxgraph_manifest = { workspace = true }
oxgraph_report = { workspace = true }
oxgraph_resolver = { workspace = true }
oxgraph_cache = { workspace = true }

globset = { workspace = true }
miette = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
