[package]
name = "oxgraph_rules"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rule engine for forbidden/required/allow dependency rules"
publish = true

[lints]
workspace = true

[dependencies]
oxgraph_graph = { workspace = true }
oxgraph_config = { workspace = true }
oxgraph_report = { workspace = true }
oxgraph_entrypoints = { workspace = true }
oxgraph_resolver = { workspace = true }

globset = { workspace = true }
miette = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
