[package]
name = "pruneguard_compat"
version = "0.4.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compatibility analysis and trust downgrade signals for pruneguard"
publish = true

[lints]
workspace = true

[dependencies]
pruneguard_frameworks = { workspace = true }
pruneguard_manifest = { workspace = true }
pruneguard_report = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rustc-hash = { workspace = true }
