[package]
name = "pruneguard_daemon"
version = "0.6.2"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hot-index daemon for pruneguard with file watching and incremental updates"
publish = true

[lints]
workspace = true

[dependencies]
pruneguard_config = { workspace = true }
pruneguard_graph = { workspace = true }
pruneguard_fs = { workspace = true }
pruneguard_discovery = { workspace = true }
pruneguard_entrypoints = { workspace = true }
pruneguard_extract = { workspace = true }
pruneguard_resolver = { workspace = true }
pruneguard_manifest = { workspace = true }
pruneguard_analyzers = { workspace = true }
pruneguard_report = { workspace = true }
pruneguard_cache = { workspace = true }
pruneguard_git = { workspace = true }
pruneguard_rules = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

tokio = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
