[package]
name = "pruneguard_discovery"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Workspace and package discovery for pruneguard"
publish = true

[lints]
workspace = true

[dependencies]
pruneguard_config = { workspace = true }
pruneguard_fs = { workspace = true }
pruneguard_manifest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
