[package]
name = "pruneguard_extract"
version = "0.6.7"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Import/export extraction from JS/TS files using oxc_parser and oxc_semantic"
publish = true

[lints]
workspace = true

[dependencies]
pruneguard_fs = { workspace = true }
pruneguard_resolver = { workspace = true }

oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_ast = { workspace = true }
oxc_allocator = { workspace = true }
oxc_syntax = { workspace = true }
oxc_diagnostics = { workspace = true }
rustc-hash = { workspace = true }
compact_str = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
