[package]
name = "pruneguard_frameworks"
version = "0.6.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Built-in framework detection packs for pruneguard"
publish = true

[lints]
workspace = true

[dependencies]
pruneguard_config = { workspace = true }
pruneguard_fs = { workspace = true }
pruneguard_manifest = { workspace = true }

globset = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }
