[package]
name = "pruneguard_report"
version = "0.4.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Report types and formatters for pruneguard output"
publish = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
