[package]
name = "pruneguard_resolver"
version = "0.6.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Module resolution for pruneguard built on oxc_resolver"
publish = true

[lints]
workspace = true

[dependencies]
pruneguard_config = { workspace = true }

oxc_resolver = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
