[package]
name = "pruneguard_rules"
version = "0.6.7"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rule engine for forbidden/required/allow dependency rules"
publish = true

[lints]
workspace = true

[dependencies]
pruneguard_graph = { workspace = true }
pruneguard_config = { workspace = true }
pruneguard_report = { workspace = true }
pruneguard_entrypoints = { workspace = true }
pruneguard_resolver = { workspace = true }

globset = { workspace = true }
miette = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
